--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -13,6 +13,12 @@ body {
     height: 12%;
 }
 
+@media screen and (max-width: 768px) {
+    .header {
+        height: 12vw;
+    }
+}
+
 
 .header_inner {
     width: 90%;
@@ -25,12 +31,24 @@ body {
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 768px) {
+    .header_inner {
+        width: 100%;
+    }
+}
+
 .header-logo {
     width: 13%;
     margin-left: 0.5%;
     height: 100%;
     display: flex;
     align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .header-logo {
+        width: 25%;
+    }
 }
 
 .header-logo input {
@@ -42,7 +60,7 @@ body {
 }
 
 .menu-btn {
-    width: 30%;
+    width: 33%;
     height: 63%;
     margin: 0;
     border-radius: 5px;
@@ -55,6 +73,12 @@ body {
     align-items: center;
     padding-left: 6%;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 768px) {
+    .menu-btn {
+        height: 80%;
+    }
 }
 
 .menu-btn span {
@@ -70,16 +94,40 @@ body {
     height: 0.168vw;
 }
 
+@media screen and (max-width: 768px) {
+    .menu-btn span:nth-child(1) {
+        top: 2vw;
+        width: 30%;
+        height: 0.26vw;
+    }
+}
+
 .menu-btn span:nth-child(2) {
     top: 1.7vw;
     width: 60%;
-    height: 0.18vw;
+    height: 0.15vw;
+}
+
+@media screen and (max-width: 768px) {
+    .menu-btn span:nth-child(2) {
+        top: 4vw;
+        width: 60%;
+        height: 0.26vw;
+    }
 }
 
 .menu-btn span:nth-child(3) {
     top: 2.5vw;
     width: 20%;
-    height: 0.18vw;
+    height: 0.155vw;
+}
+
+@media screen and (max-width: 768px) {
+    .menu-btn span:nth-child(3) {
+        top: 6vw;
+        width: 20%;
+        height: 0.26vw;
+    }
 }
 
 /* バツ状態 */
@@ -87,6 +135,12 @@ body {
     top: 1.7vw;
     width: 60%;
     transform: rotate(45deg);
+}
+
+@media screen and (max-width: 768px) {
+    .menu-btn.active span:nth-child(1) {
+        top: 4vw;
+    }
 }
 
 .menu-btn.active span:nth-child(2) {
@@ -99,14 +153,38 @@ body {
     transform: rotate(-45deg);
 }
 
+@media screen and (max-width: 768px) {
+    .menu-btn.active span:nth-child(3) {
+        top: 4vw;
+    }
+}
+
 .header-logo nav {
+    display: flex;
     width: 100%;
-    background: white;
+    height: 100%;
+    background: #FFF;
     z-index: 2;
     top: 0;
     left: 0;
     visibility: hidden;
     position: fixed;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .header-logo nav {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        background: #FFF;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        visibility: hidden;
+        position: fixed;
+        align-items: center;
+    }
 }
 
 .header-logo ul {
@@ -115,7 +193,7 @@ body {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    height: 60vw;
+    width: 100%;
     padding-left: 0;
     list-style-type: none;
 }
@@ -124,10 +202,24 @@ body {
     padding: 1em;
 }
 
+@media screen and (max-width: 768px) {
+    .header-logo ul li {
+        padding: 2em;
+    }
+}
+
 .header-logo ul li a {
     color: rgb(33, 75, 224);
     text-decoration: none;
     font-size: 2vw;
+}
+
+@media screen and (max-width: 768px) {
+    .header-logo ul li a {
+        color: rgb(33, 75, 224);
+        text-decoration: none;
+        font-size: 7vw;
+    }
 }
 
 .header-logo ul li a:hover {
@@ -141,6 +233,16 @@ body {
     color: rgb(33, 75, 224);
 }
 
+@media screen and (max-width: 768px) {
+    .header-logo ul li form button {
+        font-size: 7vw;
+        border: none;
+        cursor: pointer;
+        color: rgb(33, 75, 224);
+        background-color: #FFF;
+    }
+}
+
 .header-logo ul li form button:hover {
     opacity: 0.5;
 }
@@ -152,8 +254,21 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 2.3vw;
-    margin-left: 20%;
     color: rgb(48, 93, 255);
     margin-top: 3%;
     margin-left: 5%;
+}
+
+@media screen and (max-width: 768px) {
+    .header-logo h1 {
+        font-size: 6vw;
+        margin-left: 5%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header-logo h1 {
+        font-size: 6vw;
+        margin-left: 3%;
+    }
 }
