--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -17,6 +17,16 @@
     border-radius: 5px;
 }
 
+@media screen and (max-width: 768px) {
+    .login_inner {
+        width: 90%;
+        height: 150%;
+        margin: 10% auto;
+        box-shadow: 4px 4px 4px 0px rgba(138, 134, 134, 0.45);
+        border-radius: 5px;
+    }
+}
+
 .login_inner h1 {
     font-size: 1.4vw;
     display: flex;
@@ -27,6 +37,12 @@
     color: white;
     background-color: rgb(48, 93, 255);
     border-radius: 5px 5px 0px 0px;
+}
+
+@media screen and (max-width: 768px) {
+    .login_inner h1 {
+        font-size: 4.1vw;
+    }
 }
 
 .login_form {
@@ -47,6 +63,12 @@
     align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+    .login_form-item {
+        width: 100%;
+    }
+}
+
 .form_error {
     height: 11%;
     width: 82%;
@@ -58,22 +80,41 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 768px) {
+    .form_error {
+        width: 100%;
+        padding-left: 11%;
+        font-size: 3.6vw;
+    }
+}
+
 .email,
 .lock {
     display: flex;
     margin-right: 3%;
 }
 
-.email::before {
-    content: url(../fonts/mail.svg);
+.email::before,
+.lock::before {
     width: 2vw;
     height: 2.2vw;
 }
 
+@media screen and (max-width: 768px) {
+
+    .email::before,
+    .lock::before {
+        width: 6vw;
+        height: 6.6vw;
+    }
+}
+
+.email::before {
+    content: url(../fonts/mail.svg);
+}
+
 .lock::before {
     content: url(../fonts/key.svg);
-    width: 2vw;
-    height: 2.2vw;
 }
 
 .login_form-item input {
@@ -86,11 +127,23 @@
     margin: 0 auto;
 }
 
+@media screen and (max-width: 768px) {
+    .login_form-item input {
+        font-size: 3.6vw;
+    }
+}
+
 .login_form-btn {
     display: flex;
     width: 82%;
     margin: 0 auto;
     justify-content: right;
+}
+
+@media screen and (max-width: 768px) {
+    .login_form-btn {
+        width: 100%;
+    }
 }
 
 .login_form-btn input {
@@ -103,4 +156,13 @@
     text-align: center;
     color: white;
     background-color: rgb(48, 93, 255);
+}
+
+@media screen and (max-width: 768px) {
+    .login_form-btn input {
+        font-size: 3.3vw;
+        border: none;
+        box-shadow: 4px 4px 8px;
+        border-radius: 10px;
+    }
 }
