--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -4,6 +4,14 @@
     margin-right: 0.6%;
 }
 
+@media screen and (max-width: 768px) {
+    .search {
+        width: 70%;
+        height: 100%;
+        margin-right: 0.6%;
+    }
+}
+
 .search form {
     width: 100%;
     height: 100%;
@@ -19,23 +27,61 @@
     border: none;
     outline: none;
     cursor: pointer;
-    padding-left: 2%;
+    padding-left: 1%;
+}
+
+@media screen and (max-width: 768px) {
+    .search select {
+        font-size: 2.3vw;
+        width: 25%;
+        padding-left: 1.5%;
+    }
 }
 
 .search option {
     color: black;
 }
 
-.material-symbols-outlined {
-    color: grey;
+.search-before {
+    width: 5%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0.5%;
+}
+
+@media screen and (max-width: 768px) {
+    .search-before {
+        margin-top: 0.7%;
+    }
+}
+
+.search-before::before {
+    content: url(../fonts/search.svg);
+    width: 1.3vw;
+}
+
+@media screen and (max-width: 768px) {
+    .search-before::before {
+        width: 3vw;
+    }
 }
 
 .search input {
-    width: 60%;
+    width: 55%;
     height: 100%;
     font-size: 1.2vw;
     border: none;
     outline: none;
+}
+
+@media screen and (max-width: 768px) {
+    .search input {
+        font-size: 3vw;
+        width: 45%;
+        padding-left: 1.5%;
+    }
 }
 
 .main {
@@ -56,6 +102,12 @@
     flex-wrap: wrap;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-all_inner {
+        width: 100%;
+    }
+}
+
 .shop-all_item {
     width: 21.9%;
     height: 20vw;
@@ -64,16 +116,38 @@
     box-shadow: 3px 3px 3px 0px rgba(138, 134, 134, 0.45);
 }
 
+@media screen and (max-width: 768px) {
+    .shop-all_item {
+        width: 100%;
+        height: 90vw;
+        margin: 2vw 4vw;
+        border-radius: 12px;
+        box-shadow: 6px 6px 6px 0px rgba(138, 134, 134, 0.45);
+    }
+}
+
 .shop-img-box {
     width: 100%;
     height: 53%;
     border-radius: 6px;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-img-box {
+        border-radius: 12px;
+    }
+}
+
 .shop-img {
     width: 100%;
     height: 100%;
     border-radius: 6px 6px 0px 0px;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-img {
+        border-radius: 12px 12px 0px 0px;
+    }
 }
 
 .shop-name {
@@ -83,11 +157,25 @@
     font-weight: 600;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-name {
+        margin-top: 7%;
+        font-size: 7vw;
+    }
+}
+
 .shop-tag-box {
     display: flex;
     margin-top: 3%;
     margin-left: 4%;
     font-size: 1.05vw;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-tag-box {
+        margin-top: 4%;
+        font-size: 4.15vw;
+    }
 }
 
 .shop-bottom-box {
@@ -96,6 +184,12 @@
     width: 100%;
     height: 12%;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-bottom-box {
+        margin-top: 3%;
+    }
 }
 
 .shop-btn {
@@ -118,6 +212,13 @@
     color: #fff;
     border: none;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-btn button {
+        font-size: 3.8vw;
+        border-radius: 12px;
+    }
 }
 
 .favorite-form {
@@ -149,6 +250,14 @@
     left: 47%;
     transform: rotate(-45deg);
     transform-origin: 0 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .heart::before {
+        left: 40%;
+        transform: rotate(-45deg);
+        transform-origin: 0 100%;
+    }
 }
 
 .heart::after {
