--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -17,6 +17,16 @@
     border-radius: 5px;
 }
 
+@media screen and (max-width: 768px) {
+    .register_inner {
+        width: 90%;
+        height: 150%;
+        margin: 10% auto;
+        box-shadow: 4px 4px 4px 0px rgba(138, 134, 134, 0.45);
+        border-radius: 5px;
+    }
+}
+
 .register_inner h1 {
     font-size: 1.4vw;
     display: flex;
@@ -27,6 +37,12 @@
     color: white;
     background-color: rgb(48, 93, 255);
     border-radius: 5px 5px 0px 0px;
+}
+
+@media screen and (max-width: 768px) {
+    .register_inner h1 {
+        font-size: 4.1vw;
+    }
 }
 
 .register_form {
@@ -47,6 +63,12 @@
     align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+    .register_form-item {
+        width: 100%;
+    }
+}
+
 .form_error {
     height: 11%;
     width: 82%;
@@ -58,6 +80,14 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 768px) {
+    .form_error {
+        width: 100%;
+        padding-left: 11%;
+        font-size: 3.6vw;
+    }
+}
+
 .user-name,
 .email,
 .lock {
@@ -65,22 +95,33 @@
     margin-right: 3%;
 }
 
+.user-name::before,
+.email::before,
+.lock::before {
+    width: 2vw;
+    height: 2.2vw;
+}
+
+@media screen and (max-width: 768px) {
+
+    .user-name::before,
+    .email::before,
+    .lock::before {
+        width: 6vw;
+        height: 6.6vw;
+    }
+}
+
 .user-name::before {
     content: url(../fonts/user.svg);
-    width: 2vw;
-    height: 2vw;
 }
 
 .email::before {
     content: url(../fonts/mail.svg);
-    width: 2vw;
-    height: 2.2vw;
 }
 
 .lock::before {
     content: url(../fonts/key.svg);
-    width: 2vw;
-    height: 2.2vw;
 }
 
 .register_form-item input {
@@ -93,8 +134,10 @@
     margin: 0 auto;
 }
 
-.material-symbols-outlined {
-    font-size: 48px;
+@media screen and (max-width: 768px) {
+    .register_form-item input {
+        font-size: 3.6vw;
+    }
 }
 
 .register_form-btn {
@@ -102,6 +145,12 @@
     width: 82%;
     margin: 0 auto;
     justify-content: right;
+}
+
+@media screen and (max-width: 768px) {
+    .register_form-btn {
+        width: 100%;
+    }
 }
 
 .register_form-btn input {
@@ -114,4 +163,13 @@
     text-align: center;
     color: white;
     background-color: rgb(48, 93, 255);
+}
+
+@media screen and (max-width: 768px) {
+    .register_form-btn input {
+        font-size: 3.3vw;
+        border: none;
+        box-shadow: 4px 4px 8px;
+        border-radius: 10px;
+    }
 }
