--- a/src/public/css/shop_detail.css
+++ b/src/public/css/shop_detail.css
@@ -1,12 +1,18 @@
 .main {
     width: 100%;
     height: 78%;
-    display: flex;
 }
 
 .shop-detail {
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-detail {
+        height: auto;
+        padding-bottom: 2vh;
+    }
 }
 
 .shop-detail_inner {
@@ -18,9 +24,24 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-detail_inner {
+        width: 92%;
+        height: auto;
+        display: block;
+    }
+}
+
 .shop-description {
     width: 46.3%;
     height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-description {
+        width: 100%;
+        height: 100vh;
+    }
 }
 
 .shop-description-top {
@@ -31,9 +52,22 @@
     align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-description-top {
+        margin-top: 0%;
+    }
+}
+
 .shop-description-top form {
     width: 6%;
     height: 70%;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-description-top form {
+        width: 10%;
+        height: 7vw;
+    }
 }
 
 .shop-description-top form button {
@@ -50,10 +84,26 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-description-top form button {
+        font-size: 6vw;
+        padding-top: 6%;
+        margin-top: 3%;
+        border-radius: 10px;
+        box-shadow: 6px 6px 6px 0px rgba(138, 134, 134, 0.45);
+    }
+}
+
 .shop-description-top h2 {
     margin-left: 2%;
     font-size: 2vw;
     padding-top: 2.5%;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-description-top h2 {
+        font-size: 5vw;
+    }
 }
 
 .shop-description-img {
@@ -62,10 +112,30 @@
     margin-top: 4%;
 }
 
+@media screen and (max-width: 768px) {
+    .shop-description-img {
+        width: 100%;
+        height: 60vw;
+        margin-top: 2%;
+    }
+}
+
+.shop-description-img img {
+    width: 100%;
+    height: 100%;
+}
+
 .shop-description-tag {
     display: flex;
-    margin: 5% 0;
+    margin: 4% 0;
     font-size: 1.2vw;
+}
+
+@media screen and (max-width: 768px) {
+    .shop-description-tag {
+        font-size: 4vw;
+        margin-bottom: 2%;
+    }
 }
 
 .shop-description-text {
@@ -78,9 +148,11 @@
     font-size: 1.14vw;
 }
 
-.shop-description-img img {
-    width: 100%;
-    height: 100%;
+@media screen and (max-width: 768px) {
+    .shop-description-text p {
+        font-size: calc(0.25vw + 1.3rem);
+        letter-spacing: 3px;
+    }
 }
 
 .reservation {
@@ -94,9 +166,18 @@
     box-shadow: 3px 3px 3px 0px rgba(138, 134, 134, 0.45);
 }
 
+@media screen and (max-width: 768px) {
+    .reservation {
+        width: 100%;
+        height: 83vh;
+        margin-bottom: 13vh;
+        box-shadow: 6px 6px 6px 0px rgba(138, 134, 134, 0.45);
+    }
+}
+
 .reservation_inner {
     width: 100%;
-    height: 93%;
+    height: 83%;
     padding: 2% 5%;
     box-sizing: border-box;
 }
@@ -110,9 +191,23 @@
     color: white;
 }
 
+@media screen and (max-width: 768px) {
+    .reservation-ttl {
+        font-size: 5vw;
+        height: 17%;
+    }
+}
+
 .reservation-form {
     width: 100%;
     height: 18%;
+}
+
+@media screen and (max-width: 768px) {
+    .reservation-form {
+        height: 38%;
+        margin-bottom: 3vh;
+    }
 }
 
 .reservation-form form {
@@ -134,6 +229,15 @@
     font-weight: 600;
 }
 
+@media screen and (max-width: 768px) {
+    .reservation-form input {
+        font-size: 3.2vw;
+        height: 23%;
+        width: 50%;
+        border-radius: 12px;
+    }
+}
+
 .reservation-form select {
     width: 100%;
     height: 26%;
@@ -146,14 +250,31 @@
     font-size: 1vw;
 }
 
+@media screen and (max-width: 768px) {
+    .reservation-form select {
+        font-size: 3.2vw;
+        height: 23%;
+        border-radius: 12px;
+    }
+}
+
 .reservation-confirm {
     width: 95%;
     height: 24%;
     margin-top: 4%;
-    padding: 2.5% 3%;
+    padding: 4% 3%;
     border-radius: 5px;
     box-sizing: border-box;
     background-color: rgb(77, 127, 255);
+}
+
+@media screen and (max-width: 768px) {
+    .reservation-confirm {
+        height: 38%;
+        width: 100%;
+        padding: 3%;
+        border-radius: 12px;
+    }
 }
 
 .reservation-confirm form {
@@ -178,30 +299,48 @@
     text-align: left;
 }
 
+@media screen and (max-width: 768px) {
+    .reservation-table tr {
+        height: 5vh;
+    }
+}
+
 .reservation-table th,
-td {
+.reservation-table td {
     padding: 1.56%;
     height: 100%;
     display: flex;
     align-items: center;
     color: white;
+    font-size: 1.2vw;
     font-weight: 100;
 }
 
+@media screen and (max-width: 768px) {
+
+    .reservation-table th,
+    .reservation-table td {
+        font-size: 3.2vw;
+    }
+}
+
 .reservation-table th {
-    font-size: 1.2vw;
     width: 23%;
 }
 
 .reservation-table td {
-    font-size: 1.2vw;
     width: 70%;
-    color: white;
 }
 
 .reservation-btn {
     width: 100%;
     height: 7%;
+}
+
+@media screen and (max-width: 768px) {
+    .reservation-btn {
+        height: 10%;
+    }
 }
 
 .reservation-btn input {
@@ -213,4 +352,10 @@ td {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.1vw;
+}
+
+@media screen and (max-width: 768px) {
+    .reservation-btn input {
+        font-size: 4vw;
+    }
 }
