--- a/src/public/css/bootstrap.css
+++ b/src/public/css/bootstrap.css
@@ -72,7 +72,7 @@ strong {
 }
 
 dfn {
-  /* font-style: italic; */
+  font-style: italic;
 }
 
 h1 {
@@ -262,7 +262,7 @@ input,
 button,
 select,
 textarea {
-  /* font-family: inherit; */
+  font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
