--- a/src/public/css/shop_detail.css
+++ b/src/public/css/shop_detail.css
@@ -169,22 +169,21 @@
 @media screen and (max-width: 768px) {
     .reservation {
         width: 100%;
-        height: 83vh;
-        margin-bottom: 13vh;
+        height: 96vh;
         box-shadow: 6px 6px 6px 0px rgba(138, 134, 134, 0.45);
     }
 }
 
 .reservation_inner {
     width: 100%;
-    height: 83%;
+    height: 69%;
     padding: 2% 5%;
     box-sizing: border-box;
 }
 
 .reservation-ttl {
     width: 100%;
-    height: 12%;
+    height: 17%;
     display: flex;
     align-items: center;
     font-size: 1.9vw;
@@ -200,12 +199,12 @@
 
 .reservation-form {
     width: 100%;
-    height: 18%;
+    height: 31%;
 }
 
 @media screen and (max-width: 768px) {
     .reservation-form {
-        height: 38%;
+        height: 37%;
         margin-bottom: 3vh;
     }
 }
@@ -225,7 +224,7 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    font-size: 1.1vw;
+    font-size: 1.2vw;
     font-weight: 600;
 }
 
@@ -234,35 +233,35 @@
         font-size: 3.2vw;
         height: 23%;
         width: 50%;
-        border-radius: 12px;
+        border-radius: 8px;
     }
 }
 
 .reservation-form select {
     width: 100%;
     height: 26%;
-    padding: 0 1%;
+    padding: 0 1.5%;
     border: none;
     outline: none;
     cursor: pointer;
     border-radius: 4px;
     font-weight: 600;
-    font-size: 1vw;
+    font-size: 1.2vw;
 }
 
 @media screen and (max-width: 768px) {
     .reservation-form select {
         font-size: 3.2vw;
         height: 23%;
-        border-radius: 12px;
+        border-radius: 7px;
     }
 }
 
 .reservation-confirm {
     width: 95%;
-    height: 24%;
+    height: 33%;
     margin-top: 4%;
-    padding: 4% 3%;
+    padding: 3%;
     border-radius: 5px;
     box-sizing: border-box;
     background-color: rgb(77, 127, 255);
@@ -272,8 +271,7 @@
     .reservation-confirm {
         height: 38%;
         width: 100%;
-        padding: 3%;
-        border-radius: 12px;
+        border-radius: 7px;
     }
 }
 
@@ -293,7 +291,7 @@
 .reservation-table tr {
     display: block;
     width: 100%;
-    height: 25%;
+    height: 28%;
     display: flex;
     align-items: center;
     text-align: left;
@@ -320,7 +318,7 @@
 
     .reservation-table th,
     .reservation-table td {
-        font-size: 3.2vw;
+        font-size: 3vw;
     }
 }
 
@@ -332,6 +330,10 @@
     width: 70%;
 }
 
+.error {
+    color: #ED1A3D;
+}
+
 .reservation-btn {
     width: 100%;
     height: 7%;
@@ -339,7 +341,7 @@
 
 @media screen and (max-width: 768px) {
     .reservation-btn {
-        height: 10%;
+        height: 8%;
     }
 }
 
@@ -356,6 +358,6 @@
 
 @media screen and (max-width: 768px) {
     .reservation-btn input {
-        font-size: 4vw;
+        font-size: 3.8vw;
     }
 }
