お気に入り修正
git commit -m お気に入り修正

--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -16,7 +16,7 @@ body {
 @media screen and (max-width: 768px) {
     .header {
         height: 12vw;
-        margin-bottom: 0.5vw;
+        margin-bottom: 0.5vwz;
     }
 }
 
