--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -17,6 +17,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    background-color: #FFF;
     box-shadow: 3px 3px 3px 0px rgba(138, 134, 134, 0.45);
 }
 
@@ -113,6 +114,7 @@
     height: 20vw;
     margin: 1.35vw;
     border-radius: 6px;
+    background-color: #FFF;
     box-shadow: 3px 3px 3px 0px rgba(138, 134, 134, 0.45);
 }
 
