--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -13,6 +13,7 @@
     width: 40%;
     height: 50%;
     margin: 10% auto;
+    background-color: #fff;
     box-shadow: 2px 2px 2px 0px rgba(138, 134, 134, 0.45);
     border-radius: 5px;
 }
