--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -331,6 +331,7 @@
     width: 45%;
     height: 100%;
     border-radius: 6px;
+    background-color: #FFF;
     box-shadow: 3px 3px 3px 0px rgba(138, 134, 134, 0.45);
 }
 
