--- a/src/public/css/thanks.css
+++ b/src/public/css/thanks.css
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FFF;
     box-shadow: 3px 3px 3px 0px rgba(138, 134, 134, 0.45);
     border-radius: 6px;
     background-color: #FFF;
