--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -267,3 +267,24 @@ html,
         margin-left: 5%;
     }
 }
+
+.alert--success {
+    padding: 0.8% 6%;
+    font-size: 1.3vw;
+    border-color: #badbcc;
+    background-color: #d1e7dd;
+    color: #0f5132;
+}
+
+.alert--danger {
+    padding: 0.8% 6%;
+    font-size: 1.3vw;
+    border-color: #f5c2c7;
+    background-color: #f8d7da;
+    color: #842029;
+}
+
+.alert--danger ul {
+    margin: 0;
+    list-style: none;
+}
